--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="2dp"
-    tools:context="com.consultinghm.test2.MainActivity">
+    tools:context="com.consultinghm.prueba.MainActivity">
 
 
     <ScrollView
